Добавлена страница contacts

--- a/#sources/scss/media.scss
+++ b/#sources/scss/media.scss
@@ -25,7 +25,39 @@
 }
 
 // Medium Devices, Desktops
-@media only screen and (max-width : 992.98px) {}
+@media only screen and (max-width : 992.98px) {
+  .menu {
+
+    &__list {
+
+      li {
+
+        &+li {
+          margin-left: 30px;
+        }
+      }
+    }
+  }
+
+  .product-details {
+    &__box {
+      flex-wrap: wrap;
+    }
+
+    &__link {
+      a+a {
+        margin-left: 7px;
+      }
+    }
+
+    &__more-column {
+      // padding: 14px 15px;
+      flex: 0 1 50%;
+
+
+    }
+  }
+}
 
 // Small Devices, Tablets sm..3..3
 @media only screen and (max-width : 767.98px) {
@@ -51,55 +83,77 @@
     display: none;
   }
 
+  .menu {
+    &__list {
+      padding             : 20px 0px 0px 0px;
+      flex-direction      : column;
+      justify-content     : space-evenly;
+      position            : absolute;
+      // margin-top       : 60px;
+      left                : 0;
+      top                 : 0;
+      height              : 100%;
+      width               : 100%;
+      background-color    : #263238;
+      // margin        : 0;
+      // padding       : 0;
+      z-index             : 90;
+      overflow            : auto;
+      @include tr(0px, -100%, 0px);
+      @include anim(0.4s, 0s);
+
+      &.active {
+        @include tr(0px, 0px, 0px);
+      }
+    }
 
 
-}
 
-.menu {
-  &__list {
-    flex-direction      : column;
-    justify-content     : space-evenly;
-    position            : absolute;
-    // margin-top       : 60px;
-    left                : 0;
-    top                 : 0;
-    height              : 100%;
-    width               : 100%;
-    background-color    : #263238;
-    // margin        : 0;
-    // padding       : 0;
-    z-index             : 90;
-    overflow            : auto;
-    @include tr(0px, -100%, 0px);
-    @include anim(0.4s, 0s);
+    li {
+      &:first-child {
+        margin-top: 20px;
+      }
 
-    &.active {
-      @include tr(0px, 0px, 0px);
+      &+li {
+        margin-left  : 0px;
+        margin-bottom: 10px;
+      }
     }
   }
 
-
-
-  li {
-
-    &+li {
-
-      margin-left  : 0px;
-      margin-bottom: 10px;
-    }
+  .notification__menu,
+  .message__menu,
+  .basket__menu {
+    top : 62px;
+    left: -10px;
   }
 }
 
-.notification__menu,
-.message__menu,
-.basket__menu {
-  top     : 62px;
-  // right: 10px;
-  left    : -10px;
+
+@media only screen and (max-width : 600px) {
+  .product-details {
+
+    &__more-column {
+      flex: 0 1 100%;
+    }
+
+    &__more-item {
+      justify-content: center;
+    }
+
+    &__row {
+      flex-wrap: wrap;
+    }
+
+    &__column {
+      padding: 15px 0px 15px 30px;
+    }
+
+    &__navitem {
+      font-size: 1.4rem;
+    }
+  }
 }
-
-
-@media only screen and (max-width : 580px) {}
 
 @media only screen and (max-width : 570px) {
   .footer {
@@ -115,6 +169,8 @@
 
 }
 
+@media only screen and (max-width : 510px) {}
+
 @media only screen and (max-width : 500px) {
   .header {
     &__logo {
@@ -128,6 +184,15 @@
 
   .header__box {
     margin-right: 40px;
+  }
+
+  .product-details {
+
+    &__link {
+      a+a {
+        margin-left: 0px;
+      }
+    }
   }
 }
 
