--- a/#sources/scss/partials/reset.scss
+++ b/#sources/scss/partials/reset.scss
@@ -171,6 +171,7 @@ a {
   text-decoration : none;
   color           : inherit;
   background-color: transparent;
+  display         : inline-block;
 }
 
 a:visited {
