--- a/css/style.css
+++ b/css/style.css
@@ -1568,6 +1568,10 @@ template {
   margin-bottom: 30px;
 }
 
+.content__form-column {
+  max-width: 728px;
+  width: 100%;
+}
 .content__row {
   padding-top: 30px;
   display: -webkit-box;
@@ -1576,6 +1580,9 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+.content__info-column {
+  margin-right: 10px;
 }
 .content__info-title {
   font-size: 20px;
@@ -1643,15 +1650,31 @@ template {
   content: "";
 }
 
+.name1 {
+  margin-right: 10px;
+}
+
+.name1,
+.email {
+  max-width: 352px;
+  width: 50%;
+}
+
 .form-control {
   font-size: 15px;
-  width: 352px;
   color: #7a7a7a;
+}
+
+textarea {
+  height: 192px;
 }
 
 input[type=email],
 input[type=text],
+select,
 textarea {
+  font-size: 15px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 10px;
   padding-top: 14px;
@@ -1665,7 +1688,7 @@ textarea {
   margin-bottom: 23px;
 }
 
-.btnsend {
+input[type=submit] {
   display: block;
   text-transform: uppercase;
   font-size: 16px;
@@ -1676,6 +1699,161 @@ textarea {
   color: #fff;
 }
 
+@media screen and (max-width: 767.98px) {
+  .content__form-row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 28px;
+  }
+
+  .name1 {
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
+
+  .name1,
+.email {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .contact__map {
+    min-height: auto;
+  }
+}
+.settings {
+  background-color: #F4F6F5;
+}
+.settings__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 150px;
+}
+.settings__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.settings form {
+  padding: 30px 35px 75px 35px;
+}
+.settings label {
+  font-size: 15px;
+  color: #444444;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+.settings select {
+  font-size: 14px;
+}
+.settings__aside {
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+  border-bottom: none;
+  max-width: 270px;
+  width: 100%;
+  height: 269px;
+}
+.settings__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+.settings__navitem {
+  padding: 18px 10px 18px 25px;
+  font-size: 14px;
+  border-bottom: 1px solid #d7d7d7;
+  color: #707070;
+  font-weight: 500;
+  width: 100%;
+  cursor: pointer;
+}
+.settings__navitem.active {
+  color: #37474f;
+  border-bottom: 3px solid #8BC34A;
+}
+.settings__navitem::before {
+  content: "";
+  font-size: 14px;
+  font-family: "icomoon";
+  margin-right: 25px;
+}
+.settings__navitem::before.active::before {
+  color: #8BC34A;
+}
+.settings__items {
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+  max-width: 869px;
+  width: 100%;
+  margin-left: 30px;
+}
+.settings__item {
+  display: none;
+}
+.settings__item.active {
+  display: block;
+}
+.settings__header {
+  font-size: 24px;
+  font-weight: 500;
+  padding: 20px 0px 20px 40px;
+  border-bottom: 1px solid #d7d7d7;
+}
+.settings__navitem.active::before {
+  color: #8BC34A;
+}
+
+.form-control-set {
+  float: left;
+  width: 75%;
+  color: #7a7a7a;
+  margin-bottom: 20px;
+}
+
+.name {
+  float: left;
+  width: 25%;
+}
+
+.row {
+  width: 75%;
+  padding-left: 25%;
+}
+
+@media screen and (max-width: 767.98px) {
+  .form-control-set,
+.name {
+    width: 100%;
+  }
+
+  .settings__row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .row {
+    width: 100%;
+    padding-left: 0;
+  }
+}
 .page {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
